--- a/package.json
+++ b/package.json
@@ -61,7 +61,13 @@
     "palmy:oasys:pause-lending-pool": "hardhat --network oasys pause-lending-pool --stop --pool Palmy",
     "palmy:testnet:start-lending-pool": "hardhat --network testnet pause-lending-pool --pool Palmy",
     "palmy:oasys:start-lending-pool": "hardhat --network oasys pause-lending-pool --pool Palmy",
-    "prepublishOnly": "npm run compile"
+    "prepublishOnly": "npm run compile",
+    "oasys:deployment": "npm run compile && npm run hardhat:oasys -- oasys-deployment",
+    "oasys:deployment-libs": "npm run compile && npm run hardhat:oasys -- oasys-deployment-libraries",
+    "testnet:deployment": "npm run compile && npm run hardhat:testnet -- oasys-deployment",
+    "testnet:deployment-libs": "npm run compile && npm run hardhat:testnet -- oasys-deployment-libraries",
+    "testnet:verification": "npm run hardhat:testnet -- verification",
+    "oasys:verification": "npm run hardhat:oasys -- verification"
   },
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.7",
@@ -100,7 +106,7 @@
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "solidity-coverage": "^0.7.19",
-    "temp-hardhat-etherscan": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.5.0",
     "tslint": "^6.1.2",
