--- a/package.json
+++ b/package.json
@@ -69,8 +69,7 @@
     "testnet:verification": "npm run hardhat:testnet -- verification",
     "oasys:verification": "npm run hardhat:oasys -- verification",
     "testnet:initialization": "npm run hardhat:testnet -- oasys-initialization",
-    "oasys:initialization": "npm run hardhat:oasys -- oasys-initialization",
-    "testnet:test": "npm run hardhat:testnet -- test-oasys-initialization:oracle"
+    "oasys:initialization": "npm run hardhat:oasys -- oasys-initialization"
   },
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.7",
