--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "oasys:verify:tokens": "npm run hardhat:oasys verify:tokens -- --pool Palmy",
     "print-contracts:testnet": "npm run hardhat:testnet -- print-contracts",
     "print-contracts:oasys": "npm run hardhat:oasys -- print-contracts",
-    "print-config:testnet": "hardhat --network testnet print-config --pool Palmy --data-provider 0xA1901785c29cBd48bfA74e46b67C736b26054fa4",
-    "print-config:oasys": "hardhat --network oasys print-config --pool Palmy --data-provider 0x5BF9B2644E273D92ff1C31A83476314c95953133",
+    "testnet:print-config": "hardhat --network testnet print-config --pool Palmy",
+    "oasys:print-config": "hardhat --network oasys print-config --pool Palmy",
     "testnet:deployUIProviderV2": "hardhat --network testnet deploy-UiPoolDataProviderV2",
     "oasys:deployUIProviderV2": "hardhat --network oasys deploy-UiPoolDataProviderV2",
     "testnet:deployUIIncentivesProviderV2": "hardhat --network testnet deploy-UiIncentiveDataProviderV2",
