--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prepublishOnly": "npm run compile",
     "oasys:deployment": "npm run compile && npm run hardhat:oasys -- oasys-deployment",
     "oasys:update-oracle": "npm run compile && npm run hardhat:oasys -- update-oracle",
+    "oasys:update-oas-reserve-param": "npm run compile && npm run hardhat:oasys -- update-oas-reserve-param --pool Palmy",
     "oasys:deployment-libs": "npm run compile && npm run hardhat:oasys -- oasys-deployment-libraries",
     "testnet:deployment": "npm run compile && npm run hardhat:testnet -- oasys-deployment",
     "testnet:deployment-libs": "npm run compile && npm run hardhat:testnet -- oasys-deployment-libraries",
