--- a/package.json
+++ b/package.json
@@ -63,7 +63,14 @@
     "palmy:oasys:start-lending-pool": "hardhat --network oasys pause-lending-pool --pool Palmy",
     "prepublishOnly": "npm run compile",
     "oasys:deployment": "npm run compile && npm run hardhat:oasys -- oasys-deployment",
+    "oasys:deployment-new-lendingpool": "npm run compile && npm run hardhat:oasys -- oasys-deployment-new-lendingpool",
+    "testnet:deployment-new-lendingpool": "npm run compile && npm run hardhat:testnet -- oasys-deployment-new-lendingpool",
     "oasys:list-token": "npm run compile && npm run hardhat:oasys -- list-token",
+    "testnet:list-token": "npm run compile && npm run hardhat:testnet -- list-token",
+    "testnet:upgrade-pool-v2-to-v3": "npm run compile && npm run hardhat:testnet -- upgrade-pool-v2-to-v3",
+    "oasys:upgrade-pool-v2-to-v3": "npm run compile && npm run hardhat:oasys -- upgrade-pool-v2-to-v3",
+    "testnet:upgrade-pool-v3-to-v4": "npm run compile && npm run hardhat:testnet -- upgrade-pool-v3-to-v4",
+    "oasys:upgrade-pool-v3-to-v4": "npm run compile && npm run hardhat:oasys -- upgrade-pool-v3-to-v4",
     "oasys:update-oracle": "npm run compile && npm run hardhat:oasys -- update-oracle",
     "oasys:update-oas-reserve-param": "npm run compile && npm run hardhat:oasys -- update-oas-reserve-param --pool Palmy",
     "oasys:deployment-libs": "npm run compile && npm run hardhat:oasys -- oasys-deployment-libraries",
